refactor: Use Pair class for coordinate storage